--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ OPENAI_API_KEY=sk-**********
 
 # Maximum token limit for OpenAI API requests. This sets the maximum size of a prompt or response.
 OPENAI_MAX_TOKENS=1200
+
+# Number of concurrent batch processes (default: 3)
+CONCURRENT_BATCHES=3
