--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cli-table3": "^0.6.5",
+    "colors": "^1.4.0",
     "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
     "puppeteer-core": "^23.9.0"
