--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ OPENAI_MAX_TOKENS=1200
 
 # Number of concurrent batch processes (default: 3)
 CONCURRENT_BATCHES=3
+
+# MongoDB temp database
+MONGODB_URI=your_mongodb_connection_string
